--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
   function showName() {
     let name = localStorage.getItem("username");
-    document.getElementById("output").innerText = "Welcome back tushar, " + name;
+    document.getElementById("output").innerText = "Welcome back tushar singh, " + name;
   }
 </script>
