--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   function saveName() {
     let name = document.getElementById("nameInput").value;
     localStorage.setItem("username", name);
-    alert("Name saved in browser!");
+    alert("Name saved in browser jhfkfgjhlhglhglhglhflgljhgluyglu!");
   }
 
   function showName() {
